codama-macros/tests/codama_attribute/attribute_directive/invalid_writable.fail.rs
use codama::codama;

#[codama(account(writable = invalid))]
pub struct Test;

fn main() {}
